added the hangman template and fixed outputs